# Blind-Assistance-System

./: pyproject.toml  requirements.txt  webcam_blind_voice.py  webcam_blind_voice_v1.py  webcam_blind_voice_v2.py  webcam_blind_voice_v3.py  webcam_blind_voice_v4_final.py
