[project]
name = "blind-assistance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "contextlib2>=21.6.0",
    "cython>=3.1.2",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pillow>=8.0.0",
    "protobuf>=3.20.0",
    "pycocotools>=2.0.10",
    "pytesseract>=0.3.13",
    "python-engineio>=4.12.2",
    "pyttsx3>=2.99",
    "tensorflow>=2.19.0",
    "tf-slim>=1.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
